package bookbob.entity;

public interface OutputConversion {
    String convertPatientToOutputText();
}
