@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
hide circle

class Patient {
    -name: String
    -nric: String
    -sex: String
    -dateOfBirth: LocalDate
    -phoneNumber: String
    -homeAddress: String
    -visits: ArrayList<Visit>
    -allergies: ArrayList<String>
    -medicalHistories: ArrayList<String>

    +Patient(name: String, nric: String, visits: ArrayList<Visit>)
    +Patient(name: String, nric: String, phoneNumber: String,\n dateOfBirth: LocalDate, homeAddress: String,\n allergies: ArrayList<String>, sex: String,\n medicalHistories: ArrayList<String>, visits: ArrayList<Visit>)
    +getName(): String
    +setName(name: String): void
    +getNric(): String
    +setNric(nric: String): void
    +getDateOfBirth(): LocalDate
    +setDateOfBirth(dateOfBirth: LocalDate): void
    +getPhoneNumber(): String
    +setPhoneNumber(phoneNumber: String): void
    +getHomeAddress(): String
    +setHomeAddress(homeAddress: String): void
    +getVisits(): ArrayList<Visit>
    +setVisits(visits: ArrayList<Visit>): void
    +getAllergies(): ArrayList<String>
    +setAllergies(allergies: ArrayList<String>): void
    +getSex(): String
    +setSex(sex: String): void
    +getMedicalHistories(): ArrayList<String>
    +setMedicalHistories(medicalHistories: ArrayList<String>): void
    +toString(): String
    +convertPatientToOutputText(): String
}

interface OutputConversion {
    +convertPatientToOutputText(): String
}

class Visit {
}

class Records {
}

class CommandHandler {
}

class FileHandler {
}

OutputConversion <|.. Patient
Patient "1" o-- "many" Visit
Records "1" o-- "many" Patient
CommandHandler --> Patient : modifies >
FileHandler --> Patient : reads and writes >



@enduml